@@ -1,1 +1,2 @@
 DIST erc-0.24-pkg.tar.gz 519050 SHA256 a49ea189fd1d57e764e7934b5418b11401c8969701fcc36b5cc8d37b1e7c50cb SHA512 2cf8c74f8307ddc40a5e9292bd6773d5b1165547a0127c806110661af3e2db531f71286d0624f90eb7fc25bb78fe01bec907b9a81390a3e000eb4530ffafae9e WHIRLPOOL b8752b5f89cfc5861949ecc0d51eab0210243c2238e43c252e1a1c8cccf481026c58eb2b424660d78c9f544f1123bb96febcc2a998496557457d9689b5290206
+DIST erc-0.26-pkg.tar.gz 519289 SHA256 88e8bfa91a00cb42f601f2f64063e19fbe27411b3bfcb023a69afab6388b12bb SHA512 b4d2a1c39bbfa3dde5ea07626aadecf7e480ce0c331f953a1c550f211db46ea2a04f5999f9b70adebc095f6724950ac0ede36c55b530aa4cb68cb5c8306c59e9 WHIRLPOOL 9f297ad3adadb26db6afb5cd1c2a76b4609ad5ae72ac9974b758523b8fb117119341888f5073ed6ab09636ef9e1b6c51597f932d3fbdc78921a4802a16f00d38
