@@ -1,6 +1,11 @@
 # ChangeLog for app-xemacs/erc
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/app-xemacs/erc/ChangeLog,v 1.12 2011/07/22 11:25:01 xarthisius Exp $
+
+*erc-0.26 (11 Jul 2014)
+
+  11 Jul 2014; Mats Lidell <matsl@gentoo.org> +erc-0.26.ebuild:
+  Pre release version bump
 
 *erc-0.24 (03 Sep 2013)
 
